# xpac-Tool

./: CMakeLists.txt  GC's imgui Template.vcxproj  GC's xpac Tool GUI.cpp  GC's xpac Tool.rc  GC's xpac Tool.sln  MAPPING.GC  RCb38616  gcgui.cpp  gcgui.hpp  gfont.hpp  imgui.ini  resource.h  xpac_unpacker.cpp  xpac_unpacker.hpp  xpac_utilities.cpp  xpac_utilities.hpp
